# LeanHTTP

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
legacy/: Cargo.toml
legacy/src/: http_response.rs
legacy/src/commands/: get.rs  post.rs
src/: go.mod  main.go  main.rs
src/client/: client.go
src/cmd/: get.go  root.go
src/commands/: cli.rs  get.rs  mod.rs
src/utils/: print.go
src/version/: version.go
